--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
 
-    <title>Celebration Point</title>
+    <title>Celebrations Point</title>
 
     <!-- Tailwind CDN (NO config file) -->
     <script src="https://cdn.tailwindcss.com"></script>
